--- a/app/views/assessment_scores/_student_list.erb
+++ b/app/views/assessment_scores/_student_list.erb
@@ -35,6 +35,6 @@
   <% end %>
 <% end %>
 <script>
-  $$('.student-link').invoke('observe','click',draw_report);
-  $$('.student-link').invoke('observe','click',set_active);
+  $('.student-link').invoke('observe','click',draw_report);
+  $('.student-link').invoke('observe','click',set_active);
 </script>
