--- a/app/views/assessment_scores/fa_scores.html.erb
+++ b/app/views/assessment_scores/fa_scores.html.erb
@@ -42,15 +42,15 @@
 </div>
 <script type="text/javascript">
   function set_active(){
-    $$('.active-link').each(function(e){
+    $('.active-link').each(function(e){
       e.removeClassName('active-link');
     });
     this.addClassName('active-link')
   }
 
   document.observe("dom:loaded", function() {
-    $$('.student-link').invoke('observe','click',draw_report);
-    $$('.student-link').invoke('observe','click',set_active);
+    $('.student-link').invoke('observe','click',draw_report);
+    $('.student-link').invoke('observe','click',set_active);
     set_active.call($('<%=@student.id%>'))
   });
 </script>
