--- a/app/views/exam/_exam_marks_form.erb
+++ b/app/views/exam/_exam_marks_form.erb
@@ -115,6 +115,6 @@
 
 <% end %>
 <script>
-  $('exam_group_maximum_marks').observe('blur', function() { $$('.max_marks')      .each(function(max_marks_obj){ max_marks_obj.value = $F('exam_group_maximum_marks'); }); });
-  $('exam_group_minimum_marks').observe('blur', function() { $$('.min_marks')      .each(function(min_marks_obj){ min_marks_obj.value = $F('exam_group_minimum_marks'); }); });
+  $('exam_group_maximum_marks').observe('blur', function() { $('.max_marks')      .each(function(max_marks_obj){ max_marks_obj.value = $F('exam_group_maximum_marks'); }); });
+  $('exam_group_minimum_marks').observe('blur', function() { $('.min_marks')      .each(function(min_marks_obj){ min_marks_obj.value = $F('exam_group_minimum_marks'); }); });
 </script>
