--- a/app/views/finance/_fee_collection_batchs.html.erb
+++ b/app/views/finance/_fee_collection_batchs.html.erb
@@ -23,8 +23,8 @@
     </div>
     <div class="fee_category_scroll">
       <div class="sel-list">
-        <%= link_to_function t('all'), "$$('input.batches_box').each(function(checkbox) { checkbox.checked = true; });" %>,
-        <%= link_to_function t('none'), "$$('input.batches_box').each(function(checkbox) { checkbox.checked = false; });" %>
+        <%= link_to_function t('all'), "$('input.batches_box').each(function(checkbox) { checkbox.checked = true; });" %>,
+        <%= link_to_function t('none'), "$('input.batches_box').each(function(checkbox) { checkbox.checked = false; });" %>
       </div>
       <% @fee_category.each do |f| %>
         <div class="each_batch">
