--- a/app/views/cce_reports/_student_list.erb
+++ b/app/views/cce_reports/_student_list.erb
@@ -26,7 +26,7 @@
     <ul class="student_list">
       <% @students.each do |s| %>
         <li class="student_names">
-          <a href="#" id="<%=s.id%>"  class="student-link" > <%= s.full_name %></a>
+          <a href="#" id="<%=s.id%>" class="student-link" > <%= s.full_name %></a>
         </li>
       <% end %>
     </ul>
@@ -37,6 +37,6 @@
   <% end %>
 <% end %>
 <script>
-  $$('.student-link').invoke('observe','click',draw_report);
-  $$('.student-link').invoke('observe','click',set_active);
+  $('.student-link').invoke('observe','click',draw_report);
+  $('.student-link').invoke('observe','click',set_active);
 </script>
