--- a/app/views/courses/_batch_group_edit_form.html.erb
+++ b/app/views/courses/_batch_group_edit_form.html.erb
@@ -30,8 +30,8 @@
       </div>
       <div class="fee_category_scroll">
         <div class="sel-list">
-          <%= t('select') %>: <%= link_to_function t('all'), "$$('input.batches_box').each(function(checkbox) { checkbox.checked = true; });" %>,
-          <%= link_to_function t('none'), "$$('input.batches_box').each(function(checkbox) { checkbox.checked = false; });" %>
+          <%= t('select') %>: <%= link_to t('all'), 'javascript:void(0)', onclick: "$('input.batches_box').each(function(checkbox) { checkbox.checked = true; });" %>,
+          <%= link_to t('none'), 'javascript:void(0);', onclick: "$('input.batches_box').each(function(checkbox) { checkbox.checked = false; });" %>
         </div>
         <% @batches.each do |b| %>
           <div class="each_batch">
@@ -46,7 +46,5 @@
     <div id="submit-button">
       <%=submit_tag("► Save") %>
     </div>
-
-
   </div>
 <% end %>
