--- a/app/views/courses/_batch_group_form.html.erb
+++ b/app/views/courses/_batch_group_form.html.erb
@@ -19,34 +19,33 @@
 
 <%= form_for :batch_group, url: { action: :create_batch_group, course_id: @course.id}, remote: true do |c| %>
 
-      <div id="form-content">
-        <div class="label-field-pair">
-          <label for="name">Name</label>
-          <div class="text-input-bg"><%= c.text_field :name %></div>
+  <div id="form-content">
+    <div class="label-field-pair">
+      <label for="name">Name</label>
+      <div class="text-input-bg"><%= c.text_field :name %></div>
+    </div>
+    <div class="grades">
+      <div class="label-field-pair">
+        <label for="configuration_grading_systems">Select Batches :</label>
+      </div>
+      <div class="fee_category_scroll">
+        <div class="sel-list">
+          <%= t('select') %>: <%= link_to t('all'), 'javascript:void(0);', onclick: "$('input.batches_box').each(function(checkbox) { checkbox.checked = true; });" %>,
+          <%= link_to t('none'), 'javascript:void(0);', onclick: "$('input.batches_box').each(function(checkbox) { checkbox.checked = false; });" %>
         </div>
-        <div class="grades">
-        <div class="label-field-pair">
-          <label for="configuration_grading_systems">Select Batches :</label>
-        </div>
-        <div class="fee_category_scroll">
-          <div class="sel-list">
-            <%= t('select') %>: <%= link_to_function t('all'), "$$('input.batches_box').each(function(checkbox) { checkbox.checked = true; });" %>,
-            <%= link_to_function t('none'), "$$('input.batches_box').each(function(checkbox) { checkbox.checked = false; });" %>
+        <% @batches.each do |b| %>
+          <div class="each_batch">
+            <%= check_box_tag "batch_ids[]", b.id, false, class: :batches_box %> <%= b.name %>
           </div>
-          <% @batches.each do |b| %>
-            <div class="each_batch">
-              <%= check_box_tag "batch_ids[]", b.id,false,:class=>'batches_box' %> <%= b.name %>
-            </div>
-          <% end %>
-        </div>
+        <% end %>
       </div>
+    </div>
 
-        <div class="extender"></div>
+    <div class="extender"></div>
 
-        <div id="submit-button">
-          <%=submit_tag("► #{t('create_text')}") %>
-        </div>
+    <div id="submit-button">
+      <%=submit_tag("► #{t('create_text')}") %>
+    </div>
 
-
-      </div>
-    <% end %>
+  </div>
+<% end %>
