--- a/app/views/courses/grouped_batches.html.erb
+++ b/app/views/courses/grouped_batches.html.erb
@@ -52,8 +52,8 @@
         </div>
         <div class="fee_category_scroll">
           <div class="sel-list">
-            <%= t('select') %>: <%= link_to_function t('all'), "$$('input.batches_box').each(function(checkbox) { checkbox.checked = true; });" %>,
-            <%= link_to_function t('none'), "$$('input.batches_box').each(function(checkbox) { checkbox.checked = false; });" %>
+            <%= t('select') %>: <%= link_to_function t('all'), "$('input.batches_box').each(function(checkbox) { checkbox.checked = true; });" %>,
+            <%= link_to_function t('none'), "$('input.batches_box').each(function(checkbox) { checkbox.checked = false; });" %>
           </div>
           <% @batches.each do |b| %>
             <div class="each_batch">
