--- a/app/views/employee/add_additional_details.erb
+++ b/app/views/employee/add_additional_details.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-  <%= image_tag("  HR/show_hr.png") %>
+  <%= image_tag("HR/show_hr.png") %>
   <h1><%= t('employee_settings') %></h1>
   <h3><%= t('add_additional_details') %></h3>
   <div id="app-back-button">
@@ -108,8 +108,8 @@
     $(link).up().insert({
       before: content.replace(regexp, new_id)
     });
-    if ($$('.input-type-select')!=""){
-      $$('.input-type-select').invoke('observe','change',toggle_custom);
+    if ($('.input-type-select')!=""){
+      $('.input-type-select').invoke('observe','change',toggle_custom);
     }
   }
 
@@ -134,10 +134,10 @@
     return true;
   }
   document.observe("dom:loaded", function() {
-    if ($$('.input-type-select')!=""){
-      $$('.input-type-select').invoke('observe','change',toggle_custom);
-      $$('.input-type-select').first().fire('change');
-      $$('select').each(function(e){
+    if ($('.input-type-select')!=""){
+      $('.input-type-select').invoke('observe','change',toggle_custom);
+      $('.input-type-select').first().fire('change');
+      $('select').each(function(e){
         toggle_custom.call(e);
       });
     }
