--- a/app/views/employee/admission1.erb
+++ b/app/views/employee/admission1.erb
@@ -19,11 +19,11 @@
 
 
 <div id="content-header">
-  <%= image_tag("  HR/show_hr.png") %>
+  <%= image_tag("HR/show_hr.png") %>
   <h1><%= t('employee_admission') %></h1>
   <h3><%= t('step_1') %></h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to image_tag("buttons/back.png", border: 0), 'javascript:void(0);', onclick: "history.back()" %>
   </div>
 </div>
 
@@ -203,12 +203,12 @@
     });
     function hide_or_show_fields(value){
       if(value == 'single'){
-        $$('.hide-on-single').each(function (elem){
+        $('.hide-on-single').each(function (elem){
           elem.hide();
         });
       }
       else{
-        $$('.hide-on-single').each(function (elem){
+        $('.hide-on-single').each(function (elem){
           elem.show();
         });
       }
