--- a/app/views/employee/admission3_1.erb
+++ b/app/views/employee/admission3_1.erb
@@ -18,12 +18,12 @@
 #under the License. -%>
 
 <div id="content-header">
-  <%= image_tag("  HR/show_hr.png") %>
-<h1><%= t('employee_admission') %></h1>
-<h3><%= t('step_4') %></h3>
-<div id="app-back-button">
-   <%= link_to_function image_tag("buttons/back.png",:border => 0), "history.back()" %>
-</div>
+  <%= image_tag("HR/show_hr.png") %>
+  <h1><%= t('employee_admission') %></h1>
+  <h3><%= t('step_4') %></h3>
+  <div id="app-back-button">
+    <%= link_to image_tag("buttons/back.png", border: 0), 'javascript:void(0);', onclick: "history.back()" %>
+  </div>
 </div>
 
 <div id="page-yield">
@@ -70,8 +70,8 @@
             </div>
             <div class="fee_category_scroll">
               <div class="sel-list">
-                <%= t('select') %>: <%= link_to_function t('all'), "$$('input.check#{i}').each(function(checkbox) { checkbox.checked = true; });" %>,
-                <%= link_to_function t('none'), "$$('input.batches_box').each(function(checkbox) { checkbox.checked = false; });" %>
+                <%= t('select') %>: <%= link_to_function t('all'), "$('input.check#{i}').each(function(checkbox) { checkbox.checked = true; });" %>,
+                <%= link_to_function t('none'), "$('input.batches_box').each(function(checkbox) { checkbox.checked = false; });" %>
               </div>
               <% additional.additional_field_options.each do |k| %>
                 <div class="each_batch">
