--- a/app/views/employee_attendance/_department_list.erb
+++ b/app/views/employee_attendance/_department_list.erb
@@ -24,8 +24,8 @@
 <div id="list_content">
   <div id="list">
     <div class="sel-list">
-      <%= t('select') %>: <%= link_to t('all'), 'javascript:void(0);', onclick: "$$('input.batches_box').each(function(checkbox) { checkbox.checked = true; });" %>,
-      <%= link_to t('none'), 'javascript:void(0);', onclick: "$$('input.batches_box').each(function(checkbox) { checkbox.checked = false; });" %>
+      <%= t('select') %>: <%= link_to t('all'), 'javascript:void(0);', onclick: "$('input.batches_box').each(function(checkbox) { checkbox.checked = true; });" %>,
+      <%= link_to t('none'), 'javascript:void(0);', onclick: "$('input.batches_box').each(function(checkbox) { checkbox.checked = false; });" %>
     </div>
     <%= form_for :employee,:url=>{:action=>'update_department_leave_reset'} do |form| %>
       <% @employees.each do |b| %>
