--- a/app/views/exam/_inactive_batch_list.html.erb
+++ b/app/views/exam/_inactive_batch_list.html.erb
@@ -23,8 +23,8 @@
   </div>
   <div class="fee_category_scroll">
     <div class="sel-list">
-      <%= t('select') %>: <%= link_to_function t('all'), "$$('input.batches_box').each(function(checkbox) { checkbox.checked = true; });" %>,
-      <%= link_to_function t('none'), "$$('input.batches_box').each(function(checkbox) { checkbox.checked = false; });" %>
+      <%= t('select') %>: <%= link_to t('all'), 'javascript:void(0);', onclick: "$('input.batches_box').each(function(checkbox) { checkbox.checked = true; });" %>,
+      <%= link_to t('none'), 'javascript:void(0);', onclick: "$('input.batches_box').each(function(checkbox) { checkbox.checked = false; });" %>
     </div>
     <% @batches.each do |d| %>
       <div class="each_batch">
