--- a/app/views/exam/_levels.html.erb
+++ b/app/views/exam/_levels.html.erb
@@ -23,8 +23,8 @@
   </div>
   <div class="fee_category_scroll">
     <div class="sel-list">
-      <%= t('select') %>: <%= link_to_function t('all'), "$$('input.batches_box').each(function(checkbox) { checkbox.checked = true; });" %>,
-      <%= link_to_function t('none'), "$$('input.batches_box').each(function(checkbox) { checkbox.checked = false; });" %>
+      <%= t('select') %>: <%= link_to_function t('all'), "$('input.batches_box').each(function(checkbox) { checkbox.checked = true; });" %>,
+      <%= link_to_function t('none'), "$('input.batches_box').each(function(checkbox) { checkbox.checked = false; });" %>
     </div>
     <% @class_designations.each do |d| %>
       <div class="each_batch">
@@ -39,8 +39,8 @@
   </div>
   <div class="fee_category_scroll">
     <div class="sel-list">
-      <%= t('select') %>: <%= link_to_function t('all'), "$$('input.batches_box1').each(function(checkbox) { checkbox.checked = true; });" %>,
-      <%= link_to_function t('none'), "$$('input.batches_box1').each(function(checkbox) { checkbox.checked = false; });" %>
+      <%= t('select') %>: <%= link_to_function t('all'), "$('input.batches_box1').each(function(checkbox) { checkbox.checked = true; });" %>,
+      <%= link_to_function t('none'), "$('input.batches_box1').each(function(checkbox) { checkbox.checked = false; });" %>
     </div>
     <% @ranking_levels.each do |r| %>
       <div class="each_batch">
