--- a/app/views/exam/generated_report4.html.erb
+++ b/app/views/exam/generated_report4.html.erb
@@ -65,7 +65,7 @@
 
 <script type="text/javascript">
   function set_active(){
-    $$('.active-link').each(function(e){
+    $('.active-link').each(function(e){
       e.removeClassName('active-link');
     });
     this.addClassName('active-link')
@@ -78,7 +78,7 @@
     })
   }
   document.observe("dom:loaded", function() {
-    $$('.student-link').invoke('observe','click',draw_report);
-    $$('.student-link').invoke('observe','click',set_active);
+    $('.student-link').invoke('observe','click',draw_report);
+    $('.student-link').invoke('observe','click',set_active);
   });
 </script>
