--- a/app/views/exam/grouping.html.erb
+++ b/app/views/exam/grouping.html.erb
@@ -21,7 +21,7 @@
   {
     if ((document.getElementById('chck1')).checked == true)
     {
-      $$('input.right').each(function(checkbox) { checkbox.checked = true; });
+      $('input.right').each(function(checkbox) { checkbox.checked = true; });
       total=0;
       for(i=0;i<=c;i++)
       {
@@ -32,7 +32,7 @@
     }
     else
     {
-      $$('input.right').each(function(checkbox) { checkbox.checked = false; });
+      $('input.right').each(function(checkbox) { checkbox.checked = false; });
       for(i=0;i<=c;i++)
       {
         box=$("check"+i);
@@ -113,8 +113,8 @@
   </div>
   <div id="application-list">
 <%#*<div class="sel-list">%>
-<%#= t('select') %><%#: <%= link_to_function t('all'), "$$('input.right').each(function(checkbox) { checkbox.checked = true; });" %>
-<%#= link_to_function t('none'), "$$('input.right').each(function(checkbox) { checkbox.checked = false; });" %>
+<%#= t('select') %><%#: <%= link_to_function t('all'), "$('input.right').each(function(checkbox) { checkbox.checked = true; });" %>
+<%#= link_to_function t('none'), "$('input.right').each(function(checkbox) { checkbox.checked = false; });" %>
 <%#*</div>%>
     <% unless @exam_groups.empty? %>
       <h4><%= t('connect_exams') %></h4>
