--- a/app/views/exam_reports/archived_batches_exam_report.html.erb
+++ b/app/views/exam_reports/archived_batches_exam_report.html.erb
@@ -18,11 +18,11 @@
 #under the License. -%>
 
 <div id="content-header">
-  <%= image_tag("  examination/show_exam.png") %>
+  <%= image_tag("examination/show_exam.png") %>
   <h1><%= t('archived_exams') %></h1>
   <h3><%= t('grouped_exam_reports') %></h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("  buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to_function image_tag("buttons/back.png",:border => 0), "history.back()" %>
   </div>
 </div>
 <div id="inner-tab-menu">
@@ -46,7 +46,7 @@
 
 <script type="text/javascript">
   function set_active(){
-    $$('.active-link').each(function(e){
+    $('.active-link').each(function(e){
       e.removeClassName('active-link');
     });
     this.addClassName('active-link')
@@ -59,7 +59,7 @@
     })
   }
   document.observe("dom:loaded", function() {
-    $$('.student-link').invoke('observe','click',draw_report);
-    $$('.student-link').invoke('observe','click',set_active);
+    $('.student-link').invoke('observe','click',draw_report);
+    $('.student-link').invoke('observe','click',set_active);
   });
 </script>
