--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -30,9 +30,9 @@
     <% end %>
 
     <%= stylesheet_link_tag :application, media: 'all', 'data-turbolinks-track' => true %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag :application, 'data-turbolinks-track' => true %>
 
-    <%= javascript_include_tag :defaults, cache: 'cache/javascripts/all' %>
+    <%#= javascript_include_tag :defaults, cache: 'cache/javascripts/all' %>
     <%= javascript_include_tag 'scripts/nicetitle', 'droplicious' %>
     <%= javascript_include_tag 'builder' %>
     <%= javascript_include_tag 'modalbox' %>
@@ -48,14 +48,14 @@
           </div>
           <div id="header_link" >
             <div id="messages-link">
-              <%= link_to t('messages'), :controller => "reminder", :action => "index" %>
+              <%= link_to t('messages'), reminder_index_path %>
               <%= render partial: 'layouts/reminder_count' %>
             </div>
             <div id="profile-link">
-              <%= link_to @current_user.first_name, { controller: :user, action: :profile, id: @current_user.username }, class: "profile-link" %>
+              <%= link_to @current_user.first_name, profile_user_path(id: @current_user.username), class: "profile-link" %>
             </div>
             <div id="logout-link">
-              <%= link_to t('log_out'), logout_user_index_path %>
+              <%= link_to t('log_out'), logout_user_index_path, method: :DELETE %>
             </div>
           </div>
         </div>
