--- a/app/views/sms/_list_employees.html.erb
+++ b/app/views/sms/_list_employees.html.erb
@@ -17,11 +17,11 @@
 #specific language governing permissions and limitations
 #under the License. -%>
 
-  
+
 <div id="list">
   <div class="sel-list">
-    <%= t('select') %> : <%= link_to_function "#{t('all')}", "$$('input.right').each(function(checkbox) { checkbox.checked = true; });" %>,
-<%= link_to_function "#{t('none')}", "$$('input.right').each(function(checkbox) { checkbox.checked = false; });" %>
+    <%= t('select') %> : <%= link_to_function "#{t('all')}", "$('input.right').each(function(checkbox) { checkbox.checked = true; });" %>,
+<%= link_to_function "#{t('none')}", "$('input.right').each(function(checkbox) { checkbox.checked = false; });" %>
   </div>
 <% @employees.each do |employee| %>
  <div class="name_list<%=cycle('odd', 'even')%>"><li>
