--- a/app/views/sms/_list_students.html.erb
+++ b/app/views/sms/_list_students.html.erb
@@ -20,8 +20,8 @@
 
 <div id="list">
   <div class="sel-list">
-    <%= t('select') %>: <%= link_to_function "#{t('all')}", "$$('input.right').each(function(checkbox) { checkbox.checked = true; });" %>,
-<%= link_to_function "#{t('none')}", "$$('input.right').each(function(checkbox) { checkbox.checked = false; });" %>
+    <%= t('select') %>: <%= link_to_function "#{t('all')}", "$('input.right').each(function(checkbox) { checkbox.checked = true; });" %>,
+<%= link_to_function "#{t('none')}", "$('input.right').each(function(checkbox) { checkbox.checked = false; });" %>
 </div>
 <% @students.each do |student| %>
 
