--- a/app/views/student/admission4.erb
+++ b/app/views/student/admission4.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-  <%= image_tag("  admission/admission_page_logo.jpg") %>
+  <%= image_tag("admission/admission_page_logo.jpg") %>
   <h1><%= t('admission') %></h1>
   <h3><%= t('step4') %></h3>
 </div>
@@ -65,8 +65,8 @@
             </div>
             <div class="fee_category_scroll">
               <div class="sel-list">
-                <%= t('select') %>: <%= link_to_function t('all'), "$$('input.check#{i}').each(function(checkbox) { checkbox.checked = true; });" %>,
-                <%= link_to_function t('none'), "$$('input.batches_box').each(function(checkbox) { checkbox.checked = false; });" %>
+                <%= t('select') %>: <%= link_to_function t('all'), "$('input.check#{i}').each(function(checkbox) { checkbox.checked = true; });" %>,
+                <%= link_to_function t('none'), "$('input.batches_box').each(function(checkbox) { checkbox.checked = false; });" %>
               </div>
               <% additional.student_additional_field_options.each do |k| %>
                 <div class="each_batch">
