--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,6 +58,7 @@
     <%= javascript_include_tag 'jquery/jquery.min.js' %>
     <%= javascript_include_tag 'jquery/jquery-ui.min.js'%>
     <%= javascript_include_tag 'jquery/jquery.hotkeys.js'%>
+    <%= csrf_meta_tags %>
   </head>
 
   <body>
