--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -37,6 +37,7 @@
     <%= javascript_include_tag 'builder' %>
     <%= javascript_include_tag 'modalbox' %>
     <%#= javascript_include_tag 'jquery/jquery.hotkeys.js'%>
+    <%= csrf_meta_tags %>
   </head>
 
   <body>
