--- a/app/views/user/dashboard.erb
+++ b/app/views/user/dashboard.erb
@@ -262,7 +262,7 @@
 <div id="option_description"> </div>
 
 <script type="text/javascript">
-  $('#user_options .button-box').each(function(ele, index){
+  jQuery('#user_options .button-box').each(function(ele, index){
     if(index%5 == 0){
       ele.addClassName("left-button");
     }
