update folder structure

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,14 +50,14 @@
     <%= yield :head %>
 
     <script type="text/javascript">
-      document.observe("dom:loaded", function() {
+      $(document).on("dom:loaded", function() {
         render_generic_hook(<%= render_generic_hook %>)
       });
     </script>
 
-    <%= javascript_include_tag 'jquery/jquery.min.js' %>
-    <%= javascript_include_tag 'jquery/jquery-ui.min.js'%>
-    <%= javascript_include_tag 'jquery/jquery.hotkeys.js'%>
+    <%#= javascript_include_tag 'jquery/jquery.min.js' %>
+    <%#= javascript_include_tag 'jquery/jquery-ui.min.js'%>
+    <%#= javascript_include_tag 'jquery/jquery.hotkeys.js'%>
     <%= csrf_meta_tags %>
   </head>
 
