--- a/app/views/user/profile.erb
+++ b/app/views/user/profile.erb
@@ -22,13 +22,13 @@
   <h1><%= t('user_profile') %></h1>
   <h3><%= t('user_information') %></h3>
   <div id="app-back-button">
-    <%= link_to_function image_tag("buttons/back.png",:border => 0), "history.back()" %>
+    <%= link_to image_tag("buttons/back.png", border: 0), 'javascript: void(0);', onclick: "history.back()" %>
   </div>
 </div>
 
 <% if @current_user.id == @user.id %>
   <div id="inner-tab-menu">
-    <ul><li><%= link_to "#{t('change_password')}", :controller => "user", :action => "change_password" %></li></ul>
+    <ul><li><%= link_to t('change_password'), controller: :user, action: :change_password %></li></ul>
   </div>
 <% end %>
 
@@ -53,10 +53,7 @@
 
     <% if @current_user.id == @user.id %>
       <div class="profile_info_label"><%= t('language') %></div>
-      <div class="profile_info_text"> <%= select :configuration, :locale, available_language_options ,{:selected=>"#{I18n.locale}"},
-          {:onchange => "#{remote_function(
-          :url => { :controller=>'application',:action => 'set_language' },
-          :with => "'language='+value"  )}"}%> </div>
+      <div class="profile_info_text"> <%= select :configuration, :locale, available_language_options ,{ selected: I18n.locale}, { onchange: "onChangeRequest(this, '#{url_for( controller: :application, action: :set_language, language: 'paramid')}')"}%> </div>
     <% end %>
     <div class="extender"></div>
   </div>
