--- a/app/views/employee_attendance/leave_app.erb
+++ b/app/views/employee_attendance/leave_app.erb
@@ -69,7 +69,7 @@
     <span class="reminder-link">
       <%= link_to_remote "#{t('send_message')}",
         :update => "reminder-form",
-        :url => {:controller=>"reminder", :action => "pull_reminder_form", :id=>@applied_employee.id, :id2=>@employee.id,:id3=>@applied_leave.id} if @applied_leave.approved == false and @applied_leave.viewed_by_manager == false %>
+        :url => {:controller=>"reminders", :action => "pull_reminder_form", :id=>@applied_employee.id, :id2=>@employee.id,:id3=>@applied_leave.id} if @applied_leave.approved == false and @applied_leave.viewed_by_manager == false %>
     </span>
   </div>
   <div id="error-msg"></div>
