--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -52,7 +52,7 @@
           </div>
           <div id="header_link" >
             <div id="messages-link">
-              <%= link_to t('messages'), reminder_index_path %>
+              <%= link_to t('messages'), reminders_path %>
               <%= render partial: 'layouts/reminder_count' %>
             </div>
             <div id="profile-link">
