--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,7 +69,7 @@
           </div>
           <div id="header_link" >
             <div id="messages-link">
-              <%= link_to t('messages'), :controller => "reminder", :action => "index" %><%= render :partial =>'layouts/reminder_count'%>
+              <%= link_to t('messages'), reminders_path %><%= render :partial =>'layouts/reminder_count'%>
             </div>
             <div id="profile-link">
               <%= link_to @current_user.first_name, { :controller => 'users', :action => 'profile', :id => @current_user.username }, :class=>"profile-link" %>
