--- a/app/views/reminders/index.erb
+++ b/app/views/reminders/index.erb
@@ -29,12 +29,12 @@
 <div id="inner-tab-menu">
   <ul>
     <% unless @new_reminder_count.size == 0 %>
-      <li><%= link_to "<b>#{t('inbox')} (#{@new_reminder_count.size})</b>", :controller=>"reminder", :action=>"index" %></li>
+      <li><%= link_to "<b>#{t('inbox')} (#{@new_reminder_count.size})</b>", reminders_path %></li>
     <% else %>
-      <li><%= link_to "#{t('inbox')}", :controller=>"reminder", :action=>"index"%></li>
+      <li><%= link_to t('inbox'), reminders_path %></li>
     <% end %>
-    <li><%= link_to "#{t('sent')}", :controller=>"reminder", :action=>"sent_reminder"%></li>
-    <li><%= link_to "#{t('create_text')}", :controller=>"reminder", :action=>"create_reminder"%></li>
+    <li><%= link_to t('sent'), sent_reminders_path %></li>
+    <li><%= link_to t('create_text'), create_reminder_reminders_path %></li>
   </ul>
 </div>
 
@@ -46,12 +46,12 @@
 
 
   <div id="application-list">
-    <%= form_for :reminder, :url=>{:controller=>'reminder', :action=>'reminder_actions' } do |f| %>
+    <%= form_for :reminder, url: reminder_actions_reminders_path do |f| %>
       <%= hidden_field_tag :page, (params[:page].nil? ? 1 : params[:page]) %>
       <table id="listing" align="center" width="100%" cellpadding="1" cellspacing="1">
         <tr class="tr-select">
           <td colspan="4" class="text-input-bg">
-            <%= select :reminder, :action, [["#{t('delete')}", 'delete'],["#{t('mark_as_unread')}",'unread'],["#{t('mark_as_read')}",'read']], {:prompt => t('select_an_action')} , {:onChange => 'if(this.value==\'delete\'){if(confirm(\'Are you sure?\')){this.form.submit()}}else{this.form.submit()}'}  %>
+            <%= select :reminder, :action, [[t('delete'), 'delete'],[t('mark_as_unread'),'unread'],[t('mark_as_read'),'read']], {:prompt => t('select_an_action')} , {:onChange => 'if(this.value==\'delete\'){if(confirm(\'Are you sure?\')){this.form.submit()}}else{this.form.submit()}'}  %>
           </td>
         </tr>
         <tr class="tr-head">
@@ -75,24 +75,31 @@
             <tr class="tr-read-<%= cycle('odd', 'even') %>">
               <td class="col-8"><%= check_box_tag "message_ids[]", ur.id, false, {:class=>'message_check' } %></td>
               <% unless sender_user.nil? %>
-                <td class="col-4"><%= link_to "#{sender_user.first_name}", :controller=>"reminder", :action=>"view_reminder",:id2=>ur.id %></td>
+                <td class="col-4">
+                  <%= link_to sender_user.first_name, view_reminder_path(ur.id) %>
+                </td>
               <% else %>
-                <td class="col-4"><%= link_to "#{t('user_unavailable')}", :controller=>"reminder", :action=>"view_reminder",:id2=>ur.id %></td>
+                <td class="col-4"><%= link_to t('user_unavailable'), view_reminder_path(ur.id) %></td>
               <% end %>
-              <td class="col-2"><%= link_to "#{ur.subject}",  :controller=>"reminder", :action=>"view_reminder",:id2=>ur.id %></td>
-              <td class="col-1"><%= link_to "#{ur.created_at.strftime("%d-%m-%Y")}",  :controller=>"reminder", :action=>"view_reminder",:id2=>ur.id %></td>
+              <td class="col-2"><%= link_to ur.subject,view_reminder_path(ur.id) %></td>
+              <td class="col-1"><%= link_to ur.created_at.strftime("%d-%m-%Y"), view_reminder_path(ur.id) %></td>
             </tr>
           <% else %>
             <% sender_user = ur.user  %>
             <tr class="tr-<%= cycle('odd', 'even') %>">
               <td class="col-8"><%= check_box_tag "message_ids[]", ur.id, false, {:class=>'message_check' } %></td>
               <% unless sender_user.nil? %>
-                <td class="col-4"><%= link_to "#{sender_user.first_name}", :controller=>"reminder", :action=>"view_reminder",:id2=>ur.id %></td>
+                <td class="col-4">
+                  <%= link_to sender_user.first_name, view_reminder_path(ur.id) %>
+                </td>
               <% else %>
-                <td class="col-4"><%= link_to "#{t('user_unavailable')}", :controller=>"reminder", :action=>"view_reminder",:id2=>ur.id %></td>
+                <td class="col-4">
+                  <%= link_to t('user_unavailable'), view_reminder_path(ur.id) %>
+                </td>
               <% end %>
-              <td class="col-2"><%= link_to "#{ur.subject}",  :controller=>"reminder", :action=>"view_reminder",  :id2=>ur.id %></td>
-              <td class="col-1"><%= link_to "#{ur.created_at.strftime("%d-%m-%Y")}",  :controller=>"reminder", :action=>"view_reminder", :id2=>ur.id %></td>
+              <td class="col-2"><%= link_to ur.subject,view_reminder_path(ur.id) %></td>
+              <td class="col-1">
+                <%= link_to ur.created_at.strftime("%d-%m-%Y"), view_reminder_path(ur.id) %></td>
             </tr>
           <% end %>
         <% end %>
