--- a/app/views/reminders/sent_reminder.erb
+++ b/app/views/reminders/sent_reminder.erb
@@ -29,12 +29,12 @@
 <div id="inner-tab-menu">
   <ul>
     <% unless @new_reminder_count.size == 0 %>
-      <li><%= link_to "<b>#{t('inbox')} (#{@new_reminder_count.size})</b>", :controller=>"reminder", :action=>"index"%></li>
+      <li><%= link_to "<b>#{t('inbox')} (#{@new_reminder_count.size})</b>", reminders_path %></li>
     <% else %>
-      <li><%= link_to "#{t('inbox')}", :controller=>"reminder", :action=>"index"%></li>
+      <li><%= link_to t('inbox'), reminders_path %></li>
     <% end %>
-    <li><%= link_to "#{t('sent')}", :controller=>"reminder", :action=>"sent_reminder"%></li>
-    <li><%= link_to "#{t('create_text')}", :controller=>"reminder", :action=>"create_reminder"%></li>
+    <li><%= link_to t('sent'), sent_reminder_reminders_path %></li>
+    <li><%= link_to t('create_text'), create_reminder_reminders_path %></li>
   </ul>
 </div>
 
@@ -47,16 +47,16 @@
 
 
   <div id="application-list">
-    <%= form_for :reminder, :url=>{:controller=>'reminder', :action=>'sent_reminder_delete' }, :html=>{:onSubmit => "return confirm('Are you sure?')"} do |f| %>
+    <%= form_for :reminder, url: sent_reminder_delete_reminders_path, html: { onSubmit: "return confirm('Are you sure?')"} do |f| %>
       <%= hidden_field_tag :page, (params[:page].nil? ? 1 : params[:page]) %>
       <table id="listing" align="center" width="100%" cellpadding="1" cellspacing="1">
         <tr class="tr-select">
           <td colspan="4" class="text-input-bg">
-            <%= f.submit "#{t('delete')}",:class=>'submit_button' %>
+            <%= f.submit t('delete'), class: :submit_button %>
           </td>
         </tr>
         <tr class="tr-head">
-          <td class="col-8"><%= check_box_tag "check_all", nil, false, {:class=>'check_all' } %></td>
+          <td class="col-8"><%= check_box_tag "check_all", nil, false, {class: :check_all } %></td>
           <td>
             <%= t('to') %>
           </td>
@@ -75,8 +75,12 @@
             <% recipient_user = r.to_user %>
             <% unless recipient_user.nil?  %>
               <tr class="tr-read-<%= cycle('odd', 'even') %>">
-                <td class="col-8"><%= check_box_tag "message_ids[]", r.id, false, {:class=>'message_check' } %></td>
-                <td class="col-4"><%= link_to "#{recipient_user.first_name}", :controller=>"reminder", :action=>"view_sent_reminder",:id2=>r.id %></td>
+                <td class="col-8">
+                  <%= check_box_tag "message_ids[]", r.id, false, {:class=>'message_check' } %>
+                </td>
+                <td class="col-4">
+                  <%= link_to recipient_user.first_name, view_sent_reminder_reminders_path(id2: r.id) %>
+                </td>
                 <td class="col-2"><%= link_to "#{r.subject}",  :controller=>"reminder", :action=>"view_sent_reminder", :id2=>r.id %></td>
                 <td class="col-1"><%= link_to "#{r.created_at.strftime("%d-%m-%Y")}",  :controller=>"reminder", :action=>"view_sent_reminder", :id2=>r.id %></td>
               </tr>
