--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -25,13 +25,12 @@
   <div id="login_strip"></div>
   <div id="login_area_bg">
 
-    <%= form_for :user, url: login_user_index_path do |form| %>
+    <%= form_for :user, url: login_users_path do |form| %>
 
       <div id="login_area">
         <label for="username"><%= t('username') %></label>
         <div id="username_textbox_bg">
-          <%= form.text_field :username,
-            :maxlength => 40%>
+          <%= form.text_field :username, maxlength: 40 %>
         </div>
 
         <label for="password"><%= t('password') %></label>
@@ -46,13 +45,11 @@
         </div>
 
         <div id="submit_area">
-          <%= submit_tag t('login'), :class => "submit" %>
+          <%= submit_tag t('login'), class: :submit %>
         </div>
 
         <label for="forgot_password" class="forgot_password_link">
-          <%= link_to t('forgot_password'),
-            :controller => "user",
-            :action => "forgot_password" %>
+          <%= link_to t('forgot_password'), controller: :users, action: :forgot_password %>
         </label>
 
 
